# mimic-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-27-influencer-match.md  2026-06-09-formie.md  2026-06-23-mimic-core-distillation.md
docs/superpowers/specs/: 2026-05-21-marketing-os-design.md  2026-06-09-formie-design.md  2026-06-23-mimic-design.md  2026-06-25-mimic-slice2-semantic-design.md  2026-06-25-mimic-slice3-pluggable-models-design.md
eval/: run_halueval.py  run_paws.py  run_sst2.py
mimic/: __init__.py  collector.py  datasets.py  decorators.py  embedder.py  engine.py  evaluate.py  extractor.py  generator.py  intents.py  matrix.py  models.py  pipeline.py  segment.py  semantic.py  types.py
tests/: fakes.py  test_categorical.py  test_collector.py  test_datasets.py  test_decorators.py  test_embedder.py  test_engine.py  test_evaluate.py  test_evaluate_rules.py  test_extractor.py  test_generator.py  test_intents.py  test_matrix.py  test_models.py  test_paws_dataset.py  test_pipeline.py  test_scorecard_codegen.py  test_segment.py  test_semantic.py  test_sst2_dataset.py  test_types.py
