[project]
name = "mimic-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["scikit-learn>=1.4", "numpy>=1.26", "sentence-transformers>=2.6", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mimic*"]
